--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "barakadax-sanitizer",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Specific CWEs sanitizer",
-  "main": "index.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "build": "tsup"
   },
   "author": {
     "name": "Barak Taya",
@@ -30,5 +33,8 @@
     "logging",
     "logs",
     "log"
-  ]
+  ],
+  "devDependencies": {
+    "tsup": "^8.0.2"
+  }
 }
