--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "barakadax-sanitizer",
-  "version": "1.0.8",
+  "version": "1.0.11",
   "description": "CWEs sanitizer",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "test": "jest --detectOpenHandles --forceExit"
   },
   "author": {
     "name": "Barak Taya",
@@ -40,6 +43,9 @@
     "filtering"
   ],
   "devDependencies": {
+    "@types/jest": "*",
+    "jest": "*",
+    "ts-jest": "*",
     "tsup": "*"
   }
 }
